network_policy/policies/allow-from-namespace.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-from-namespace
spec:
  podSelector:
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          project: myproject
